fixed brkn skip link on game over, updated contrast

--- a/src/sass/_variables.scss
+++ b/src/sass/_variables.scss
@@ -2,7 +2,7 @@ $color--grey: #333333;
 $color--mid-grey: #777777;
 $color--white: #ffffff;
 $color--red: #b10101;
-$color--green: #00aa00;
+$color--green: #005200;
 $color--highlight: #ce35a1;
 
 $tablet-min: 768px;
